--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
     </activity>
 
             <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyB6AaN_sspwUwHHeOBt89p8vpldw1PGVuI"/>
+               android:value="`"/>
             <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
             <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>   
     </application>
