--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   webview_flutter: ^3.0.1
   shared_preferences: ^2.0.13
   flutter_facebook_auth: ^4.1.1
+  google_sign_in: ^5.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
