--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,8 +51,17 @@ android {
         multiDexEnabled = true
     }
 
+    // signingConfigs {
+    //     debug {
+    //         keyAlias 'uploadkeystore3'
+    //         keyPassword 'android'
+    //         storeFile file('upload-keystore3.jks')
+    //         storePassword 'android'
+    //     }
+    // }
+
     signingConfigs {
-        debug {
+        release {
             keyAlias 'uploadkeystore3'
             keyPassword 'android'
             storeFile file('upload-keystore3.jks')
@@ -64,7 +73,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
